# Churn-Life

./: README.md  customer_info.csv  engagement.csv  labels.csv  main.ipynb  main.py  merged_data.csv  merged_data.xlsx  policy_data.csv  pyproject.toml
.ipynb_checkpoints/: main-checkpoint.ipynb
